Added option to open Feeds in background tab. Added ability to set custom popup width.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,7 +69,7 @@
 }
 
 .item {
-    width: 350px;
+    width: 100%;
     padding: 2px 0 2px 0;
 }
 
@@ -80,10 +80,6 @@
 #feed .item:not(:last-child),
 #feed-saved .item:not(:last-child) {
     border-bottom: solid #d2d2d2 1px;
-}
-
-.tabs .item {
-    width: 380px;
 }
 
 .item .content {
@@ -133,12 +129,12 @@
 
 .article-title,
 .blog-title {
-    width: 310px;
+    width: calc(100% - 45px);
 }
 
 .tabs .article-title,
 .tabs .blog-title {
-    width: 325px;
+    width: calc(100% - 55px);
 }
 
 .article-menu {
