--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,10 @@
     src: url(opensanscondensed.woff) format("woff");
 }
 
+body {
+    font-size: 100%;
+}
+
 .button {
     margin: 0;
     padding: 5px 15px;
